--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.13.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-router-dom": "^6.22.3",
     "tailwindcss": "^4.1.17"
   },
