--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/api/:match*",
-      "destination": "https://amstem00-production-6448.up.railway.app/api/:match*"
+      "destination": "https://amstem00-production.up.railway.app/api/:match*"
     }
   ]
 }
