--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,4 @@
 PORT=3000
 DATABASE_URL=postgresql://postgres:iUofjZbLfskPVEvwwSKODlqtqKDVnUMO@turntable.proxy.rlwy.net:44058/railway
 JWT_SECRET=kunci_rahasia_amstem_sangat_aman
+VITE_GOOGLE_CLIENT_ID=666268744634-cjk51td07st807vnk4138n1kc6tn3toj.apps.googleusercontent.com
